# mcp_auth_test

./: .gitignore  README.md
dynamic_mcp_client/: README.md  main.py  pyproject.toml  test_automated.py  test_oauth_flow.py
dynamic_mcp_client/mcp_client/: client.py  discovery.py
dynamic_mcp_client/oauth/: browser.py  client.py  pkce.py
dynamic_mcp_client/storage/: models.py  persistence.py
dynamic_mcp_client/web/: app.py
dynamic_mcp_client/web/static/: app.js  style.css
dynamic_mcp_client/web/templates/: add_server.html  index.html  layout.html
greeting_mcp_server/: .env  .gitignore  README.md  main.py  pyproject.toml
greeting_mcp_server/oauth/: jwt_utils.py  storage.py
greeting_mcp_server/oauth/endpoints/: jwks.py  register.py  token.py  well_known.py
greeting_mcp_server/oauth/schemas/: dcr.py  token.py
mcp_client/: config.py  main.py  requirements.txt  test_oauth_flow.py
mcp_client/client/: __init__.py  cli.py  mcp_client.py  mock_claude.py  oauth_manager.py
simple_mcp_server/: config.py
simple_mcp_server/server/: main.py
simple_mcp_server/server/mcp/: tools.py
simple_mcp_server/server/oauth/: dependencies.py  schemas.py  token.py
simple_mcp_server/server/storage/: file_storage.py  joke_storage.py
simple_mcp_server/server/well_known/: endpoints.py
simple_mcp_server/tests/: test_integration.py
