[project]
name = "dynamic-mcp-client"
version = "0.1.0"
description = "MCP Client with Dynamic Client Registration support"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.24.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["oauth", "mcp_client", "storage", "web"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
